tests/paczka1/small_fuzzy/73601807.err
Error in line 1: LSpgjhGBoME S872 20,0
Error in line 4: LSpgjhGBoME S410 25,2
Error in line 3: EsLa7J1w3Zr S872 49,0
